fixtures/output/small-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    avp.kubernetes.io/path: path
  name: my-app
  namespace: default
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: my-app
