fixtures/output/small-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    avp.kubernetes.io/path: path
  name: my-app
  namespace: default
spec:
  tls:
  - hosts:
    - mysubdomain.foo.com
    secretName: foo-secret
