fixtures/output/small-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    avp.kubernetes.io/path: path
  name: my-app
  namespace: default
spec:
  ports:
  - port: 8080
  selector:
    app: my-app
